--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "connect-multiparty": "^2.0.0",
     "express": "^4.15.2",
     "nconf": "^0.8.4",
+    "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
     "superagent": "^3.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:tsengvn/wzimgur.git"
   }
 }
