--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.1",
     "connect-multiparty": "^2.0.0",
     "express": "^4.15.2",
+    "morgan": "^1.8.1",
     "nconf": "^0.8.4",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
